ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: azure-application-gateway
  rules:
   - host: azureus.online
     http: 
      paths: 
      - backend: 
          service:
            name: service-nginxapp
            port: 
              number: 80
        path: "/"
        pathType: Prefix
